# Sentiment-Classification-Mlflow-DVC

./: .gitignore  Dockerfile  Makefile  README.md  SETUP.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: deploy.yml
fastapi-app/: requirements.txt
fastapi_app/: .dockerignore  Dockerfile  app.py
fastapi_app/templates/: index.html
notebooks/: data.csv  exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py
scripts/: promote_model.py
sentiment_classification/: __init__.py  dataset.py  features.py  plots.py
sentiment_classification/connections/: s3_connection.py
sentiment_classification/data/: data_ingestion.py  data_preprocessing.py
sentiment_classification/features/: feature_engineering.py
sentiment_classification/modeling/: model_building.py  model_evaluation.py  predict.py  register_model.py  train.py
tests/: test_fastapi_app.py  test_model.py
