[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentiment_classification"
version = "0.0.1"
description = "End-to-end sentiment classification project"
authors = [
  { name = "Harsh Patel" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["sentiment_classification"]
include = ["pyproject.toml", "sentiment_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sentiment_classification"]
force-sort-within-sections = true

